--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -45,6 +45,7 @@ file.reference.junit-4.12-javadoc.jar=lib/junit_4/junit-4.12-javadoc.jar
 file.reference.junit-4.12-sources.jar=lib/junit_4/junit-4.12-sources.jar
 file.reference.junit-4.12.jar=lib/junit_4/junit-4.12.jar
 file.reference.mysql-connector-java-5.1.42-bin.jar=lib/mysql-connector-java-5.1.42-bin.jar
+file.reference.swingx-all-1.6.5.jar=lib\\swingx-all-1.6.5.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -65,7 +66,8 @@ javac.classpath=\
     ${file.reference.junit-4.12-sources.jar}:\
     ${file.reference.junit-4.12.jar}:\
     ${file.reference.mysql-connector-java-5.1.42-bin.jar}:\
-    ${libs.beans-binding.classpath}
+    ${libs.beans-binding.classpath}:\
+    ${file.reference.swingx-all-1.6.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
