--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,6 +5,17 @@ annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=Zavrsni
 application.vendor=Marko Kova\u010devi\u0107
+auxiliary.de-markiewb-netbeans-plugins-eclipse-formatter.eclipseFormatterActiveProfile=Eclipse [built-in] a
+auxiliary.de-markiewb-netbeans-plugins-eclipse-formatter.eclipseFormatterEnabled=false
+auxiliary.de-markiewb-netbeans-plugins-eclipse-formatter.eclipseFormatterLocation=D:\\JAVA_programer\\formaterIzEclipse.xml
+auxiliary.de-markiewb-netbeans-plugins-eclipse-formatter.enableFormatAsSaveAction=true
+auxiliary.de-markiewb-netbeans-plugins-eclipse-formatter.linefeed=\\n
+auxiliary.de-markiewb-netbeans-plugins-eclipse-formatter.preserveBreakPoints=true
+auxiliary.de-markiewb-netbeans-plugins-eclipse-formatter.SaveActionModifiedLinesOnly=false
+auxiliary.de-markiewb-netbeans-plugins-eclipse-formatter.showNotifications=true
+auxiliary.de-markiewb-netbeans-plugins-eclipse-formatter.sourcelevel=1.8
+auxiliary.de-markiewb-netbeans-plugins-eclipse-formatter.useProjectPref=false
+auxiliary.de-markiewb-netbeans-plugins-eclipse-formatter.useProjectSettings=true
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
