--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -78,7 +78,8 @@ javac.classpath=\
     ${file.reference.junit-4.12.jar}:\
     ${file.reference.mysql-connector-java-5.1.42-bin.jar}:\
     ${libs.beans-binding.classpath}:\
-    ${file.reference.swingx-all-1.6.5.jar}
+    ${file.reference.swingx-all-1.6.5.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
